# QuantzAI

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml  cost_model_EURUSD.yaml  logging.yaml
data/processed/: README.md  paper_trades.json
docs/: strategy_research_log.md
gui/: app.py
gui/backends/: backtest_backend.py
gui/design/: theme.py  tokens.py
gui/dialogs/: trade_confirmation_dialog.py
gui/services/: watchdog_service.py
gui/views/: attribution_view.py  backtest_view.py  cockpit_view.py  dashboard_view.py  journal_view.py  practice_mode_view.py  risk_center_view.py  settings_view.py  shadow_view.py
gui/widgets/: activity_log_widget.py  bot_controls_widget.py  chart_widget.py  console_widget.py  order_event_relay.py  watchlist_widget.py
scripts/: analyse_3way_portfolio.py  analyse_pnl_sharpe.py  analyse_portfolio_correlation.py  analyse_test2_robustness.py  build_cost_model.py  build_mtf_features.py  download_gdelt_news.py  dry_run_baseline_eurusd.py  fetch_data.py  fetch_dukascopy.py  fetch_dukascopy_parallel.py  fetch_fusion_ref.py  fetch_fusion_spread.py  fetch_fusion_ticks_spread.py  label_eurusd_triple_barrier.py  reset_paper_state.py  run_backtest.py  run_bot.py  run_gui_bot.py  run_test1_usdjpy_h4.py  run_test2_usdjpy_d1.py  run_test3_xauusd_h4.py  run_test4_eurusd_h4_mr.py  shap_analysis.py  train_model.py  train_mr_model.py  watchdog.py
src/: account_manager.py  modes.py  orchestrator.py  shadow.py
src/backtesting/: vectorbt_runner.py  wf_pnl.py
(+110 files in other folders)
