[project]
name = "quantzai"
version = "0.1.0"
description = "Automated ML-based trading system for MT5"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "loguru>=0.7",
  "pandas-ta>=0.3",
  "requests>=2.31",
  "tqdm>=4.66",
  "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "black>=24.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
mt5 = [
  "MetaTrader5>=5.0.45",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]

[tool.black]
line-length = 88
